--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          mypy pylint
+          pip install mypy pylint
 
       - name: Run mypy to generate cache
         run: mypy pylogger || true
